--- a/directbak.yaml
+++ b/directbak.yaml
@@ -95,7 +95,6 @@ payload:
   - '+.01p.com'
   - '+.01rv.com'
   - '+.01teacher.com'
-  - '+.01tingshu.com'
   - '+.01w.com'
   - '+.01wb.com'
   - '+.01xs.com'
@@ -163,7 +162,6 @@ payload:
   - '+.024888.net'
   - '+.024bj.com'
   - '+.024eps.com'
-  - '+.024feida.com'
   - '+.024frde.com'
   - '+.024fuchan.com'
   - '+.024fuwu.com'
@@ -1042,7 +1040,6 @@ payload:
   - '+.124866.xyz'
   - '+.125.la'
   - '+.12530.com'
-  - '+.12540.org'
   - '+.12580.com'
   - '+.12580.net'
   - '+.12580.tv'
@@ -1772,7 +1769,6 @@ payload:
   - '+.1mayi.com'
   - '+.1mfg.com'
   - '+.1miba.com'
-  - '+.1mingpian.com'
   - '+.1mishu.com'
   - '+.1mit.com'
   - '+.1mm8.com'
@@ -2792,6 +2788,7 @@ payload:
   - '+.360xiehui.com'
   - '+.360xkw.com'
   - '+.360xlab.org'
+  - '+.360yao.com'
   - '+.360yfw.com'
   - '+.360youtu.com'
   - '+.360zhai.com'
@@ -4894,7 +4891,6 @@ payload:
   - '+.5xcg.com'
   - '+.5xiaobo.com'
   - '+.5xini.com'
-  - '+.5xml.com'
   - '+.5xts.com'
   - '+.5y100.com'
   - '+.5y51.com'
@@ -5160,7 +5156,6 @@ payload:
   - '+.6789che.com'
   - '+.678edu.net'
   - '+.678ie.com'
-  - '+.678pdf.com'
   - '+.678py.com'
   - '+.67gu.com'
   - '+.67joy.com'
@@ -5594,7 +5589,6 @@ payload:
   - '+.7dah8.com'
   - '+.7didc.com'
   - '+.7do.net'
-  - '+.7down.com'
   - '+.7down.net'
   - '+.7dsp.com'
   - '+.7dtest.com'
@@ -8372,7 +8366,6 @@ payload:
   - '+.anjuke.com'
   - '+.anjukestatic.com'
   - '+.ankang06.org'
-  - '+.ankangrc.com'
   - '+.ankangwang.com'
   - '+.ankebio.com'
   - '+.ankelife.com'
@@ -9137,7 +9130,6 @@ payload:
   - '+.av2.me'
   - '+.av269.com'
   - '+.av380.net'
-  - '+.av4me.com'
   - '+.avalon.pw'
   - '+.avalon233.com'
   - '+.avanpa.com'
@@ -9962,7 +9954,6 @@ payload:
   - '+.bcrealm.com'
   - '+.bcreat.com'
   - '+.bcrjl.com'
-  - '+.bcsec.org'
   - '+.bcsytv.com'
   - '+.bctest.com'
   - '+.bctmo.com'
@@ -13307,7 +13298,6 @@ payload:
   - '+.chefafa.com'
   - '+.chefans.com'
   - '+.chefugao.com'
-  - '+.chegud.com'
   - '+.cheguo.com'
   - '+.chehang168.com'
   - '+.chehejia.com'
@@ -13790,7 +13780,6 @@ payload:
   - '+.chinaembassy.at'
   - '+.chinaemed.com'
   - '+.chinaequity.net'
-  - '+.chinaerman.com'
   - '+.chinaesm.com'
   - '+.chinaexam.org'
   - '+.chinaexpo365.com'
@@ -13927,7 +13916,6 @@ payload:
   - '+.chinalions.com'
   - '+.chinaliyou.com'
   - '+.chinalm.org'
-  - '+.chinalongmai.net'
   - '+.chinalowcarb.com'
   - '+.chinalsjt.com'
   - '+.chinalubricant.com'
@@ -13946,7 +13934,6 @@ payload:
   - '+.chinamcloud.com'
   - '+.chinameasure.com'
   - '+.chinameat.org'
-  - '+.chinameidu.com'
   - '+.chinamendu.com'
   - '+.chinamenwang.com'
   - '+.chinamerger.com'
@@ -15552,7 +15539,6 @@ payload:
   - '+.cnyuming.com'
   - '+.cnyw.net'
   - '+.cnywinfo.com'
-  - '+.cnyxs.com'
   - '+.cnzazhi.net'
   - '+.cnzhanting.com'
   - '+.cnzhanzhang.com'
@@ -17316,7 +17302,6 @@ payload:
   - '+.dazahui123.com'
   - '+.dazhan123.com'
   - '+.dazhangfang.com'
-  - '+.dazhaoad.com'
   - '+.dazhaopeibang.com'
   - '+.dazhe5.com'
   - '+.dazhenzimiao.com'
@@ -19359,7 +19344,6 @@ payload:
   - '+.dzhaoj.com'
   - '+.dzhope.com'
   - '+.dzhqexpo.com'
-  - '+.dzjcp998.com'
   - '+.dzjrc.com'
   - '+.dzkbw.com'
   - '+.dzlaa.com'
@@ -20225,7 +20209,6 @@ payload:
   - '+.enetedu.com'
   - '+.enfi.vip'
   - '+.enfodesk.com'
-  - '+.enfogrowth.com'
   - '+.eng24.com'
   - '+.eng888.com'
   - '+.engeniustec.com'
@@ -20425,7 +20408,6 @@ payload:
   - '+.esclass.com'
   - '+.esdaxiagu.com'
   - '+.esde.cc'
-  - '+.esduu.com'
   - '+.esellerbox-case.com'
   - '+.esemseo.com'
   - '+.esensoft.com'
@@ -20668,7 +20650,6 @@ payload:
   - '+.excean.com'
   - '+.excel8.com'
   - '+.excel880.com'
-  - '+.excel99.com'
   - '+.excelcn.com'
   - '+.excelhome.net'
   - '+.excelpx.com'
@@ -21524,6 +21505,7 @@ payload:
   - '+.fgtymk.com'
   - '+.fgvisa.net'
   - '+.fh1551.com'
+  - '+.fh21.com'
   - '+.fh21static.com'
   - '+.fh77.com'
   - '+.fh77.net'
@@ -21808,7 +21790,6 @@ payload:
   - '+.flyfunny.com'
   - '+.flygo.net'
   - '+.flygon.net'
-  - '+.flyguest.com'
   - '+.flyhand.com'
   - '+.flyine.net'
   - '+.flyme.com'
@@ -22387,7 +22368,6 @@ payload:
   - '+.fy98.com'
   - '+.fyapi.net'
   - '+.fybiji.com'
-  - '+.fybooks.com'
   - '+.fybxw.com'
   - '+.fychinago.com'
   - '+.fycpu.com'
@@ -22867,7 +22847,6 @@ payload:
   - '+.gdjqwl.com'
   - '+.gdjyrcw.com'
   - '+.gdjyw.com'
-  - '+.gdkaman.com'
   - '+.gdkepler.com'
   - '+.gdkjb.com'
   - '+.gdkjw.com'
@@ -24638,6 +24617,7 @@ payload:
   - '+.h3c.com'
   - '+.h3dns.net'
   - '+.h3ue2s.com'
+  - '+.h3wog.com'
   - '+.h3yun.com'
   - '+.h4.cc'
   - '+.h41s.com'
@@ -24833,7 +24813,6 @@ payload:
   - '+.haitao.com'
   - '+.haitao369.com'
   - '+.haitao8.com'
-  - '+.haitaohou.com'
   - '+.haitaoing.com'
   - '+.haitaoit.com'
   - '+.haitaoj.com'
@@ -24860,7 +24839,6 @@ payload:
   - '+.haiwaioo.com'
   - '+.haiwaiyou.com'
   - '+.haiwaiyoujia.com'
-  - '+.haiwanli.com'
   - '+.haiwanxinxi.com'
   - '+.haiweili.com'
   - '+.haiwell.com'
@@ -25220,7 +25198,6 @@ payload:
   - '+.haowandeni.com'
   - '+.haowanok.com'
   - '+.haowanyou.com'
-  - '+.haoweiguang.me'
   - '+.haoweishow.com'
   - '+.haowen100.com'
   - '+.haoword.com'
@@ -26179,7 +26156,6 @@ payload:
   - '+.hightopo.com'
   - '+.highwayguitar.com'
   - '+.higon.com'
-  - '+.higrid.net'
   - '+.hihell.com'
   - '+.hihocoder.com'
   - '+.hihonor.com'
@@ -26264,6 +26240,7 @@ payload:
   - '+.hitfmfans.com'
   - '+.hitgk.com'
   - '+.hitnology.com'
+  - '+.hitnslab.net'
   - '+.hitouch.com'
   - '+.hitui.com'
   - '+.hitutu.com'
@@ -27472,7 +27449,6 @@ payload:
   - '+.hubwiz.com'
   - '+.hucdn.com'
   - '+.huceo.com'
-  - '+.huchao.me'
   - '+.huchaowei.com'
   - '+.hucheng100.com'
   - '+.hudai.com'
@@ -28042,7 +28018,6 @@ payload:
   - '+.hytcshare.com'
   - '+.hytd.com'
   - '+.hytera.com'
-  - '+.hytic.net'
   - '+.hyundai-hmtc.com'
   - '+.hyundaibeijing.com'
   - '+.hyuuhit.com'
@@ -29744,7 +29719,6 @@ payload:
   - '+.iruidian.com'
   - '+.iruixing.com'
   - '+.irukou.com'
-  - '+.irunyan.com'
   - '+.is-programmer.com'
   - '+.is36.com'
   - '+.isamanhua.com'
@@ -30363,7 +30337,6 @@ payload:
   - '+.jbdown.com'
   - '+.jbedu.org'
   - '+.jbelf.com'
-  - '+.jbqipa.com'
   - '+.jbryun.com'
   - '+.jbxy.com'
   - '+.jbzj.com'
@@ -31802,7 +31775,6 @@ payload:
   - '+.jobdogame.com'
   - '+.jobeast.com'
   - '+.jobgojob.com'
-  - '+.jobguangfu.com'
   - '+.jobhb.com'
   - '+.jobi5.com'
   - '+.jobinhe.net'
@@ -32819,6 +32791,7 @@ payload:
   - '+.kangbaifoundation.com'
   - '+.kangbatv.com'
   - '+.kangbidz.com'
+  - '+.kangbixing.com'
   - '+.kangcdn.com'
   - '+.kangchun.com'
   - '+.kangdajiuzhou.com'
@@ -33133,7 +33106,6 @@ payload:
   - '+.kequcps.com'
   - '+.ker58.com'
   - '+.kerlala.com'
-  - '+.kermitym.com'
   - '+.kernel-sh.com'
   - '+.kernel.cc'
   - '+.kernelnote.com'
@@ -33449,7 +33421,6 @@ payload:
   - '+.km1818.com'
   - '+.kmail.com'
   - '+.kmapp.net'
-  - '+.kmcaishui.com'
   - '+.kmcenter.org'
   - '+.kmcha.com'
   - '+.kmcits.com'
@@ -34712,7 +34683,6 @@ payload:
   - '+.legend-go.com'
   - '+.legendsec.com'
   - '+.legendtkl.com'
-  - '+.legoflow.com'
   - '+.legou456.com'
   - '+.legowechat.com'
   - '+.legu.cc'
@@ -35110,7 +35080,6 @@ payload:
   - '+.liaocy.net'
   - '+.liaogu.com'
   - '+.liaogx.com'
-  - '+.liaohuqiu.net'
   - '+.liaojieju.com'
   - '+.liaokeyu.com'
   - '+.liaokong.com'
@@ -35665,7 +35634,6 @@ payload:
   - '+.liveinau.com'
   - '+.liveincy.com'
   - '+.livejournal.com'
-  - '+.livejournal.net'
   - '+.liveme.com'
   - '+.livemediav.com'
   - '+.livemook.com'
@@ -36925,7 +36893,6 @@ payload:
   - '+.maiziedu.com'
   - '+.maizim.com'
   - '+.maizipo.com'
-  - '+.maizitime.com'
   - '+.maizuo.com'
   - '+.majia99.com'
   - '+.majiamen.com'
@@ -37335,7 +37302,6 @@ payload:
   - '+.mcwshop.com'
   - '+.mcx666.com'
   - '+.mcyhfl.com'
-  - '+.mcyo.pw'
   - '+.mczyz.com'
   - '+.mdaxue.com'
   - '+.mdbimg.com'
@@ -37381,7 +37347,6 @@ payload:
   - '+.med66.com'
   - '+.meda.cc'
   - '+.medeming.com'
-  - '+.mediafq.com'
   - '+.mediatek.com'
   - '+.mediav.com'
   - '+.mediawords.org'
@@ -38300,7 +38265,6 @@ payload:
   - '+.mm52.net'
   - '+.mm8mm8.com'
   - '+.mm957.com'
-  - '+.mmalammd.com'
   - '+.mmall.com'
   - '+.mmaqa.com'
   - '+.mmarket.com'
@@ -42179,7 +42143,6 @@ payload:
   - '+.pngui.com'
   - '+.pnlyy.com'
   - '+.pnol.net'
-  - '+.pnp8.com'
   - '+.pnwww.com'
   - '+.pnxs.com'
   - '+.pnzpw.com'
@@ -43101,7 +43064,6 @@ payload:
   - '+.qiaohu.com'
   - '+.qiaohuapp.com'
   - '+.qiaohumall.com'
-  - '+.qiaohumi.com'
   - '+.qiaojiang.tv'
   - '+.qiaomaren.com'
   - '+.qiaomi.com'
@@ -43831,7 +43793,6 @@ payload:
   - '+.qsmis.com'
   - '+.qspfw.com'
   - '+.qspfwadmin.com'
-  - '+.qsqssy.com'
   - '+.qss-lb.com'
   - '+.qssec.com'
   - '+.qstatic.com'
@@ -44234,7 +44195,6 @@ payload:
   - '+.qysgf.com'
   - '+.qysuliao.com'
   - '+.qyt1902.com'
-  - '+.qyt321.com'
   - '+.qytdesign.com'
   - '+.qytst.com'
   - '+.qytxhy.com'
@@ -44455,7 +44415,6 @@ payload:
   - '+.react-china.org'
   - '+.react.mobi'
   - '+.read678.com'
-  - '+.read8.net'
   - '+.readboy.com'
   - '+.readceo.com'
   - '+.readdsp.com'
@@ -46115,6 +46074,7 @@ payload:
   - '+.sgcctop.com'
   - '+.sgchinese.com'
   - '+.sgcn.com'
+  - '+.sgcn.org'
   - '+.sgcyjy.com'
   - '+.sgda.cc'
   - '+.sgdmobile.com'
@@ -46924,7 +46884,6 @@ payload:
   - '+.shoutao.biz'
   - '+.shouxi.com'
   - '+.shouxi88.com'
-  - '+.shouxibet.com'
   - '+.shouxieti.com'
   - '+.shouxintec.com'
   - '+.shouyao.com'
@@ -47090,7 +47049,6 @@ payload:
   - '+.shuhuangla.com'
   - '+.shui.moe'
   - '+.shui12366.com'
-  - '+.shui2014.com'
   - '+.shuicao.cc'
   - '+.shuichachong.com'
   - '+.shuichan.cc'
@@ -47249,7 +47207,6 @@ payload:
   - '+.shygc.net'
   - '+.shyhhema.com'
   - '+.shyihuoh.com'
-  - '+.shyingfu.net'
   - '+.shyjad.com'
   - '+.shykx.com'
   - '+.shykz123456.com'
@@ -47776,7 +47733,6 @@ payload:
   - '+.sljkj.com'
   - '+.sljypt.com'
   - '+.sllai.com'
-  - '+.slmbio.com'
   - '+.slogra.com'
   - '+.slooti.com'
   - '+.slpi1.com'
@@ -48371,6 +48327,7 @@ payload:
   - '+.spforum.net'
   - '+.spgnux.com'
   - '+.spibj.com'
+  - '+.spiderprobe.com'
   - '+.spiiker.com'
   - '+.spin-view.com'
   - '+.spirit-doll.net'
@@ -48435,7 +48392,6 @@ payload:
   - '+.sqggzy.com'
   - '+.sqkb.com'
   - '+.sql110.com'
-  - '+.sqlsec.com'
   - '+.sqngvd.com'
   - '+.sqqmall.com'
   - '+.sqrc.net'
@@ -51105,7 +51061,6 @@ payload:
   - '+.tongye.biz'
   - '+.tongyi.com'
   - '+.tongyidrying.com'
-  - '+.tongyongji.net'
   - '+.tongyuanos.com'
   - '+.tongyue.com'
   - '+.tongzhuo100.com'
@@ -52074,7 +52029,6 @@ payload:
   - '+.tz1980.com'
   - '+.tz887.com'
   - '+.tz911.com'
-  - '+.tzaqwl.com'
   - '+.tzbank.com'
   - '+.tzbank.net'
   - '+.tzbao.com'
@@ -52171,7 +52125,6 @@ payload:
   - '+.ubetween.com'
   - '+.ubgame.com'
   - '+.ubicdn.com'
-  - '+.ubicmedia.com'
   - '+.ubijoy.com'
   - '+.ubiquant.com'
   - '+.ubismartparcel.com'
@@ -53441,7 +53394,6 @@ payload:
   - '+.vsyo.com'
   - '+.vtache.com'
   - '+.vtbs.fun'
-  - '+.vte8.com'
   - '+.vteamgroup.com'
   - '+.vtears.com'
   - '+.vtepai.com'
@@ -53903,7 +53855,6 @@ payload:
   - '+.wanyuwang.com'
   - '+.wanyxbox.com'
   - '+.wanzhao.com'
-  - '+.wanzhongcar.com'
   - '+.wanzhoumo.com'
   - '+.wanzhuang.com'
   - '+.wanzhuangkj.com'
@@ -54882,7 +54833,6 @@ payload:
   - '+.whrsip.com'
   - '+.whrtmpay.com'
   - '+.whsdsyy.com'
-  - '+.whseoclub.com'
   - '+.whsir.com'
   - '+.whsladz.com'
   - '+.whsladz.net'
@@ -54951,7 +54901,6 @@ payload:
   - '+.whyiqitong.com'
   - '+.whyldd.net'
   - '+.whyongwei.com'
-  - '+.whyqhg.com'
   - '+.whyqi.com'
   - '+.whys558.com'
   - '+.whysdomain.com'
@@ -55223,7 +55172,6 @@ payload:
   - '+.wjyh.com'
   - '+.wjyt-china.org'
   - '+.wjyw.com'
-  - '+.wjzj.vip'
   - '+.wk007.com'
   - '+.wk2.com'
   - '+.wk78.com'
@@ -56265,8 +56213,6 @@ payload:
   - '+.xa9t.com'
   - '+.xaahjy.com'
   - '+.xabbp.com'
-  - '+.xabcdns.com'
-  - '+.xabcloud.com'
   - '+.xacbank.com'
   - '+.xacbwl.com'
   - '+.xachangda.com'
@@ -56449,7 +56395,6 @@ payload:
   - '+.xctmr.com'
   - '+.xcultur.com'
   - '+.xcurrency.com'
-  - '+.xcvgame.cc'
   - '+.xcvmbyte.com'
   - '+.xcvxcv.space'
   - '+.xcx-x.com'
@@ -59177,7 +59122,6 @@ payload:
   - '+.yeepiao.com'
   - '+.yeeuu.com'
   - '+.yeeyan.com'
-  - '+.yeeyan.org'
   - '+.yegame.com'
   - '+.yegenyou.com'
   - '+.yegoo.com'
@@ -59337,7 +59281,6 @@ payload:
   - '+.yhdns.net'
   - '+.yhdtns.com'
   - '+.yhees.com'
-  - '+.yhetent.com'
   - '+.yhgfb-cn-static.com'
   - '+.yhgo.wang'
   - '+.yhgo8.com'
@@ -59469,7 +59412,6 @@ payload:
   - '+.yigaosu.com'
   - '+.yige.org'
   - '+.yigecun.com'
-  - '+.yigeqianbao.com'
   - '+.yigerlife.com'
   - '+.yigood.net'
   - '+.yigoonet.com'
@@ -59642,7 +59584,6 @@ payload:
   - '+.yingpaigame.com'
   - '+.yingshe.com'
   - '+.yingsheng.com'
-  - '+.yingshiborui.com'
   - '+.yingshixiaoshuo.com'
   - '+.yingshiyou.com'
   - '+.yingsoo.com'
@@ -59930,7 +59871,6 @@ payload:
   - '+.yizhanzx.com'
   - '+.yizhema.com'
   - '+.yizhengwx.com'
-  - '+.yizhi-its.com'
   - '+.yizhibi.com'
   - '+.yizhibo.com'
   - '+.yizhidayu.com'
@@ -62651,7 +62591,6 @@ payload:
   - '+.zhixin-semi.com'
   - '+.zhixingapp.com'
   - '+.zhixingbus.com'
-  - '+.zhixinjiayuan.com'
   - '+.zhixiu.net'
   - '+.zhixuan.com'
   - '+.zhixue.com'
