--- a/directbak.yaml
+++ b/directbak.yaml
@@ -843,7 +843,6 @@ payload:
   - '+.1122dh.com'
   - '+.1124.cc'
   - '+.1128.org'
-  - '+.112812.com'
   - '+.1128job.com'
   - '+.112book.com'
   - '+.112seo.com'
@@ -5954,7 +5953,6 @@ payload:
   - '+.86y.org'
   - '+.86yqy.com'
   - '+.86zsw.com'
-  - '+.87.com'
   - '+.870818.com'
   - '+.8714.com'
   - '+.87188718.com'
@@ -6539,7 +6537,6 @@ payload:
   - '+.94ys.com'
   - '+.95.com'
   - '+.95021.com'
-  - '+.95060.com'
   - '+.95081.com'
   - '+.950901.com'
   - '+.95105369.com'
@@ -7136,7 +7133,6 @@ payload:
   - '+.acesheep.com'
   - '+.acetace.com'
   - '+.acewill.net'
-  - '+.acflow.com'
   - '+.acftu.org'
   - '+.acfunchina.com'
   - '+.acg-moe.com'
@@ -7597,7 +7593,6 @@ payload:
   - '+.aidigger.com'
   - '+.aidigong.com'
   - '+.aidimedia.com'
-  - '+.aidingbuding.com'
   - '+.aidisida.com'
   - '+.aidjyun.com'
   - '+.aidlearning.net'
@@ -13552,6 +13547,7 @@ payload:
   - '+.china-co.com'
   - '+.china-coc.org'
   - '+.china-consulate.org'
+  - '+.china-core.com'
   - '+.china-csdz.com'
   - '+.china-csm.org'
   - '+.china-d.com'
@@ -15661,7 +15657,6 @@ payload:
   - '+.coderyuan.com'
   - '+.coderzh.com'
   - '+.codes51.com'
-  - '+.codesocang.com'
   - '+.codesoft.hk'
   - '+.codesoftchina.com'
   - '+.codesoso.com'
@@ -19669,7 +19664,6 @@ payload:
   - '+.ec-founder.com'
   - '+.ec-world.com'
   - '+.ec.com'
-  - '+.ec0715.com'
   - '+.ec3s.com'
   - '+.ec51.com'
   - '+.ec517.com'
@@ -21851,7 +21845,6 @@ payload:
   - '+.fm960.net'
   - '+.fmbimg.com'
   - '+.fmcoprc.gov.mo'
-  - '+.fmeibao.com'
   - '+.fminers.com'
   - '+.fmketang.com'
   - '+.fmpan.com'
@@ -27229,7 +27222,6 @@ payload:
   - '+.huafens.com'
   - '+.huafer.cc'
   - '+.huaguoshan.com'
-  - '+.huahai108.com'
   - '+.huahanart.com'
   - '+.huahua777.com'
   - '+.huahuacaocao.com'
@@ -29668,7 +29660,6 @@ payload:
   - '+.ipingyao.com'
   - '+.ipinyou.com'
   - '+.ipip.net'
-  - '+.ipipeline-private.com'
   - '+.ipktv.com'
   - '+.ipku.com'
   - '+.iplascloud.com'
@@ -35453,6 +35444,7 @@ payload:
   - '+.linkingme.com'
   - '+.linkist.net'
   - '+.linknewideas.com'
+  - '+.linkpai.com'
   - '+.linkpro.tech'
   - '+.linkrall-trk.com'
   - '+.linkresearcher.com'
@@ -39440,7 +39432,6 @@ payload:
   - '+.nanoer.net'
   - '+.nanputuo.com'
   - '+.nanqi.org'
-  - '+.nanrenbang.in'
   - '+.nanrentu.cc'
   - '+.nanrenwa.com'
   - '+.nanshanski.com'
@@ -40566,8 +40557,6 @@ payload:
   - '+.ocimg.com'
   - '+.oclkj.com'
   - '+.ocooca.com'
-  - '+.ocri-genomics.org'
-  - '+.ocrmaker.com'
   - '+.ocsjs.com'
   - '+.ocsp.globalsign.com'
   - '+.ocsp.us.cdnetworks.com'
@@ -45114,7 +45103,6 @@ payload:
   - '+.ruanman.net'
   - '+.ruanmei.com'
   - '+.ruanmou.net'
-  - '+.ruanno1.com'
   - '+.ruantiku.com'
   - '+.ruanwen.la'
   - '+.ruanwenclass.com'
@@ -49608,6 +49596,7 @@ payload:
   - '+.szvca.com'
   - '+.szvft.com'
   - '+.szvi-bo.com'
+  - '+.szwaishi.com'
   - '+.szwb.com'
   - '+.szwblm.com'
   - '+.szwego.com'
@@ -51669,7 +51658,6 @@ payload:
   - '+.tuanimg.com'
   - '+.tuanjiebao.com'
   - '+.tuankezhan.com'
-  - '+.tuanlego.com'
   - '+.tuanlin.net'
   - '+.tuanpibao.com'
   - '+.tuanping.com'
@@ -53754,6 +53742,7 @@ payload:
   - '+.wangchujiang.com'
   - '+.wangchunsheng.com'
   - '+.wangcms.com'
+  - '+.wangdahn.com'
   - '+.wangdaibus.com'
   - '+.wangdaicaifu.com'
   - '+.wangdaidongfang.com'
@@ -55467,7 +55456,6 @@ payload:
   - '+.woliuda.com'
   - '+.wolonge.com'
   - '+.wolongge.com'
-  - '+.wolongimg.com'
   - '+.wolongyin.com'
   - '+.wolongyoule.com'
   - '+.wolongzywcdn.com'
@@ -56357,6 +56345,7 @@ payload:
   - '+.xasrc.com'
   - '+.xaszjf.com'
   - '+.xatao029.com'
+  - '+.xatcrj.com'
   - '+.xatielu.com'
   - '+.xatongsheng.net'
   - '+.xatvs.com'
