--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1,5 +1,4 @@
 payload:
-  - '+.0-100.com'
   - '+.0-6.com'
   - '+.00.net'
   - '+.000.link'
@@ -4673,7 +4672,6 @@ payload:
   - '+.5906333.com'
   - '+.590m.com'
   - '+.59120.com'
-  - '+.591234x.com'
   - '+.59168.net'
   - '+.59178.com'
   - '+.5918dyw.com'
@@ -8267,7 +8265,6 @@ payload:
   - '+.ampmake.com'
   - '+.ampxl.com'
   - '+.ams-ic.com'
-  - '+.amsjsy.com'
   - '+.amsoveasea.com'
   - '+.amssro.net'
   - '+.amtron-ic.com'
@@ -9698,7 +9695,6 @@ payload:
   - '+.bao21.com'
   - '+.bao315.com'
   - '+.bao369.com'
-  - '+.baobabnet.com'
   - '+.baobao.com'
   - '+.baobao001.com'
   - '+.baobao88.com'
@@ -12282,7 +12278,6 @@ payload:
   - '+.cashtoutiao.com'
   - '+.cashwaytech.com'
   - '+.casic-addsino.com'
-  - '+.casic-amc.com'
   - '+.casic-t.com'
   - '+.casic.com'
   - '+.casic304.com'
@@ -13209,7 +13204,6 @@ payload:
   - '+.chaojifan.com'
   - '+.chaojifangyu.com'
   - '+.chaojihetong.com'
-  - '+.chaojishipin.com'
   - '+.chaojixiaobaicai.club'
   - '+.chaojiying.com'
   - '+.chaojiyun.com'
@@ -14244,6 +14238,7 @@ payload:
   - '+.chitanda.me'
   - '+.chitu.com'
   - '+.chitu107.com'
+  - '+.chitus.com'
   - '+.chivast.com'
   - '+.chivox.com'
   - '+.chivoxapp.com'
@@ -16401,6 +16396,7 @@ payload:
   - '+.ct-laser.com'
   - '+.ct10000.com'
   - '+.ct108.com'
+  - '+.ct52.com'
   - '+.ct597.com'
   - '+.ctaca.com'
   - '+.ctags.net'
@@ -19270,7 +19266,6 @@ payload:
   - '+.dxton.com'
   - '+.dxwei.com'
   - '+.dxxnews.com'
-  - '+.dxxps.com'
   - '+.dxxxfl.com'
   - '+.dxy.com'
   - '+.dxy.me'
@@ -24919,7 +24914,6 @@ payload:
   - '+.halobear.com'
   - '+.halomobi.com'
   - '+.haluoha.com'
-  - '+.hambut.com'
   - '+.hamir.net'
   - '+.han-ju.cc'
   - '+.han-tang.cc'
@@ -25019,6 +25013,7 @@ payload:
   - '+.hanyou.com'
   - '+.hanyougame.com'
   - '+.hanyouwang.com'
+  - '+.hanyu.life'
   - '+.hanyucar.com'
   - '+.hanyurumen.com'
   - '+.hanzhifeng.com'
@@ -28390,6 +28385,7 @@ payload:
   - '+.iblue.me'
   - '+.ibluefrog.com'
   - '+.ibluesocial.com'
+  - '+.ibmfwqdl.com'
   - '+.ibmhz.com'
   - '+.ibmwclub.com'
   - '+.ibook8.com'
@@ -29867,7 +29863,6 @@ payload:
   - '+.istylepdf.com'
   - '+.isudaji.com'
   - '+.isuike.com'
-  - '+.isumiao.com'
   - '+.isummi.com'
   - '+.isun.org'
   - '+.isuzhou.me'
@@ -34452,6 +34447,7 @@ payload:
   - '+.laohuyun.com'
   - '+.laojilu.com'
   - '+.laojiuxitong.com'
+  - '+.laojuhui.com'
   - '+.laoke.com'
   - '+.laolai.com'
   - '+.laoliang.net'
@@ -38773,7 +38769,6 @@ payload:
   - '+.mr91.com'
   - '+.mrabit.com'
   - '+.mrbanana.com'
-  - '+.mrbluyee.com'
   - '+.mrcjcn.com'
   - '+.mrcrm.com'
   - '+.mrcywang.com'
@@ -40468,6 +40463,7 @@ payload:
   - '+.nxyqs.com'
   - '+.ny-yy.com'
   - '+.ny83.com'
+  - '+.nya.ink'
   - '+.nyaacat.com'
   - '+.nyasama.com'
   - '+.nyato.com'
@@ -44673,7 +44669,6 @@ payload:
   - '+.repianimg.com'
   - '+.replays.net'
   - '+.replicated.cc'
-  - '+.rerevod.com'
   - '+.resccske.cyou'
   - '+.resheji.com'
   - '+.resistor.today'
@@ -47581,7 +47576,6 @@ payload:
   - '+.site-digger.com'
   - '+.siteapp-static.com'
   - '+.sitekc.com'
-  - '+.sites120.com'
   - '+.sithc.com'
   - '+.sitiaoyu.com'
   - '+.sitongedu.org'
@@ -56028,7 +56022,6 @@ payload:
   - '+.www-63608.com'
   - '+.www-hangzhou-aliyun.com'
   - '+.www.adobe.com'
-  - '+.www.agoda.com'
   - '+.www.akamai.com'
   - '+.www.amd.com'
   - '+.www.analog.com'
@@ -56598,7 +56591,6 @@ payload:
   - '+.xfinfr.com'
   - '+.xfisp.com'
   - '+.xfjw.net'
-  - '+.xfkou.com'
   - '+.xfliusheng.com'
   - '+.xfn.xyz'
   - '+.xfnano.com'
@@ -63067,7 +63059,6 @@ payload:
   - '+.zhuoshigroup.com'
   - '+.zhuoshixiong.com'
   - '+.zhuotingwl.com'
-  - '+.zhuotujiaoyu.com'
   - '+.zhuoyi.com'
   - '+.zhuoyigame.com'
   - '+.zhuoyigame.site'
