--- a/directbak.yaml
+++ b/directbak.yaml
@@ -37,7 +37,6 @@ payload:
   - '+.007shoes.com'
   - '+.007swz.com'
   - '+.00817.com'
-  - '+.0082tv.com'
   - '+.008321.com'
   - '+.0086crane.com'
   - '+.0086l.com'
@@ -108,7 +107,6 @@ payload:
   - '+.020ym.com'
   - '+.020zp.net'
   - '+.021-atp.com'
-  - '+.021-cz.com'
   - '+.021-tp.com'
   - '+.021-zszx.com'
   - '+.021.com'
@@ -193,7 +191,6 @@ payload:
   - '+.027hpedu.com'
   - '+.027hpit.com'
   - '+.027htxt.com'
-  - '+.027hxj.com'
   - '+.027hxzy.com'
   - '+.027hy.com'
   - '+.027idc.com'
@@ -1167,7 +1164,6 @@ payload:
   - '+.13xiaoshuoa.com'
   - '+.13yx.com'
   - '+.140414.com'
-  - '+.140ed8.com'
   - '+.1415926.com'
   - '+.1415926.mobi'
   - '+.14294.com'
@@ -1817,7 +1813,6 @@ payload:
   - '+.1tong.com'
   - '+.1tu-design.com'
   - '+.1tu.com'
-  - '+.1tu1.com'
   - '+.1tuikem.com'
   - '+.1uke.com'
   - '+.1uuc.com'
@@ -2408,7 +2403,6 @@ payload:
   - '+.300400.net'
   - '+.300624.com'
   - '+.300hu.com'
-  - '+.300p.com'
   - '+.300ppt.com'
   - '+.300zi.com'
   - '+.301688.com'
@@ -2796,7 +2790,6 @@ payload:
   - '+.360yao.com'
   - '+.360yfw.com'
   - '+.360youtu.com'
-  - '+.360zhai.com'
   - '+.360zhuizhu.com'
   - '+.360zhyx.com'
   - '+.361.cm'
@@ -2994,7 +2987,6 @@ payload:
   - '+.3839vc.com'
   - '+.3839video.com'
   - '+.383yun.com'
-  - '+.387a.com'
   - '+.3887.com'
   - '+.388g.com'
   - '+.3892222.com'
@@ -4286,6 +4278,7 @@ payload:
   - '+.52muyou.com'
   - '+.52myqq.com'
   - '+.52njl.com'
+  - '+.52nyg.com'
   - '+.52opencourse.com'
   - '+.52pcfree.com'
   - '+.52pi.com'
@@ -4631,7 +4624,6 @@ payload:
   - '+.58duihuan.com'
   - '+.58food.com'
   - '+.58game.com'
-  - '+.58gameup.com'
   - '+.58ganji.com'
   - '+.58hzb.com'
   - '+.58insure.com'
@@ -5952,7 +5944,6 @@ payload:
   - '+.86yqy.com'
   - '+.86zsw.com'
   - '+.870818.com'
-  - '+.8714.com'
   - '+.87188718.com'
   - '+.872.cc'
   - '+.8721.com'
@@ -8981,6 +8972,7 @@ payload:
   - '+.aspxhtml.com'
   - '+.asrmicro.com'
   - '+.ass-casa.com'
+  - '+.assassinscreedcodenamejade.com'
   - '+.asset.msi.com'
   - '+.assets-global.viveport.com'
   - '+.assets.analog.com'
@@ -9054,7 +9046,6 @@ payload:
   - '+.aucanlink.com'
   - '+.aucnln.com'
   - '+.audio160.com'
-  - '+.audiobookbay.nl'
   - '+.audiobuy.cc'
   - '+.audiocn.com'
   - '+.audiocn.net'
@@ -9189,6 +9180,7 @@ payload:
   - '+.awsdns-cn-21.biz'
   - '+.awsdns-cn-24.com'
   - '+.awsdns-cn-36.net'
+  - '+.awsdns-cn-52.net'
   - '+.awsdns-cn-57.com'
   - '+.awsdns-cn-58.net'
   - '+.awsl.wang'
@@ -9528,7 +9520,6 @@ payload:
   - '+.baitiao.com'
   - '+.baituibao.com'
   - '+.baiu.com'
-  - '+.baiud.com'
   - '+.baiven.com'
   - '+.baiwandz.com'
   - '+.baiwang.com'
@@ -10725,7 +10716,6 @@ payload:
   - '+.bitse.com'
   - '+.bitsqa.com'
   - '+.bittopmall.com'
-  - '+.bitu360.com'
   - '+.bitvh.com'
   - '+.biubiu.tv'
   - '+.biubiu001.com'
@@ -11250,7 +11240,6 @@ payload:
   - '+.bocsolution.com'
   - '+.bodahu.com'
   - '+.bodchan.com'
-  - '+.bodekang.com'
   - '+.bodimedia.net'
   - '+.bodoai.com'
   - '+.bodogqm.com'
@@ -12050,7 +12039,6 @@ payload:
   - '+.caijingwa.com'
   - '+.caijingwu.com'
   - '+.caijinyuan.com'
-  - '+.caijixia.com'
   - '+.caijuanjuan.com'
   - '+.caike.com'
   - '+.caiku.com'
@@ -13770,7 +13758,6 @@ payload:
   - '+.chinadmoz.org'
   - '+.chinadns.org'
   - '+.chinadonghai.com'
-  - '+.chinadoudi.com'
   - '+.chinadrtv.com'
   - '+.chinadsl.net'
   - '+.chinadyt.com'
@@ -15041,7 +15028,6 @@ payload:
   - '+.cn51.com'
   - '+.cn5135.com'
   - '+.cn539.com'
-  - '+.cn68.com'
   - '+.cn6szx.com'
   - '+.cn8fre.com'
   - '+.cn99.com'
@@ -16428,6 +16414,7 @@ payload:
   - '+.ctfund.com'
   - '+.ctghealthy.com'
   - '+.ctghr.com'
+  - '+.cthhmu.com'
   - '+.cthuwork.com'
   - '+.cthuwork.net'
   - '+.cthy.com'
@@ -17065,7 +17052,6 @@ payload:
   - '+.dangzhi.net'
   - '+.danhua.org'
   - '+.danhuaer.com'
-  - '+.danhw.com'
   - '+.daniao.org'
   - '+.daniate.com'
   - '+.daningcenter.com'
@@ -18437,7 +18423,6 @@ payload:
   - '+.dnsmeasurement.com'
   - '+.dnsmsn.com'
   - '+.dnsng.net'
-  - '+.dnsnn.com'
   - '+.dnsns5.com'
   - '+.dnsns6.com'
   - '+.dnsnw.com'
@@ -19587,7 +19572,6 @@ payload:
   - '+.easylink.io'
   - '+.easylinkin.com'
   - '+.easylinkin.net'
-  - '+.easymks.com'
   - '+.easymorse.com'
   - '+.easymule.com'
   - '+.easynet.vip'
@@ -20664,7 +20648,6 @@ payload:
   - '+.exaphotons.com'
   - '+.exasic.com'
   - '+.exbot.net'
-  - '+.exbulk.com'
   - '+.excake.com'
   - '+.excalibur.link'
   - '+.excaliburdx.com'
@@ -20928,6 +20911,7 @@ payload:
   - '+.fandengds.com'
   - '+.fandian.com'
   - '+.fandongxi.com'
+  - '+.fane8.com'
   - '+.fanerkongjian.com'
   - '+.fanfannet.com'
   - '+.fanfou.com'
@@ -21119,6 +21103,7 @@ payload:
   - '+.farmkd.com'
   - '+.farmsec.com'
   - '+.farsee2.com'
+  - '+.farsightdev.com'
   - '+.fas-bee.com'
   - '+.fashaoyou.net'
   - '+.fasheng.org'
@@ -21863,7 +21848,6 @@ payload:
   - '+.fnjsq.com'
   - '+.fnkq.com'
   - '+.fnmobi.com'
-  - '+.fnmz.com'
   - '+.fnnsh.com'
   - '+.fnrcw.com'
   - '+.fnrczp.com'
@@ -23268,6 +23252,7 @@ payload:
   - '+.gitee.com'
   - '+.gitee.io'
   - '+.githang.com'
+  - '+.github.red'
   - '+.githubusercontents.com'
   - '+.gitlee.com'
   - '+.gitlib.com'
@@ -24326,6 +24311,7 @@ payload:
   - '+.gworg.com'
   - '+.gwoversea.com'
   - '+.gwwell.com'
+  - '+.gwy.com'
   - '+.gwyoo.com'
   - '+.gwyou.com'
   - '+.gwypxw.com'
@@ -24401,7 +24387,6 @@ payload:
   - '+.gxxmyjs.com'
   - '+.gxycwy.com'
   - '+.gxyljf.com'
-  - '+.gxylxtc.com'
   - '+.gxyxlx.com'
   - '+.gxzjy.com'
   - '+.gxzmrl.com'
@@ -24577,6 +24562,7 @@ payload:
   - '+.gztclwx.net'
   - '+.gztfgame.com'
   - '+.gzthrc.com'
+  - '+.gztime.cc'
   - '+.gztopkt.com'
   - '+.gztour.org'
   - '+.gztv.com'
@@ -24981,6 +24967,7 @@ payload:
   - '+.hankunlaw.com'
   - '+.hanlefang.net'
   - '+.hanlei.org'
+  - '+.hanlin.press'
   - '+.hanlinzhijia.net'
   - '+.hanmadiancan.com'
   - '+.hanmaker.com'
@@ -25077,7 +25064,6 @@ payload:
   - '+.haochangyou.com'
   - '+.haocheedai.com'
   - '+.haochengda.net'
-  - '+.haochi123.com'
   - '+.haochijixie.com'
   - '+.haochu.com'
   - '+.haodaibao.com'
@@ -25319,6 +25305,7 @@ payload:
   - '+.harrypottermagicawakened.com'
   - '+.harvestcm.com'
   - '+.harvestpawn.com'
+  - '+.harvey.plus'
   - '+.hasea.com'
   - '+.hasee.com'
   - '+.hasee.net'
@@ -26006,7 +25993,6 @@ payload:
   - '+.hezibuluo.com'
   - '+.hezijia.com'
   - '+.hezxs.com'
-  - '+.hf-dhj.com'
   - '+.hf-iflysse.com'
   - '+.hf10000.com'
   - '+.hf12345.vip'
@@ -26599,7 +26585,6 @@ payload:
   - '+.hnticai.com'
   - '+.hntobacco.com'
   - '+.hntv.tv'
-  - '+.hntvjiaotong.com'
   - '+.hntxxy.com'
   - '+.hnwisecom.com'
   - '+.hnwlcm.com'
@@ -29936,7 +29921,6 @@ payload:
   - '+.itdhz.com'
   - '+.itdiffer.com'
   - '+.itdks.com'
-  - '+.itdlc.com'
   - '+.itdoor.net'
   - '+.itdos.com'
   - '+.itdos.net'
@@ -31287,7 +31271,6 @@ payload:
   - '+.jinkosolar.com'
   - '+.jinku.com'
   - '+.jinlaiba.com'
-  - '+.jinlanqihua.com'
   - '+.jinlianchu.com'
   - '+.jinlinghotel.com'
   - '+.jinlinghotels.com'
@@ -31356,6 +31339,7 @@ payload:
   - '+.jinxuliang.com'
   - '+.jinxun.cc'
   - '+.jinyaco.com'
+  - '+.jinyidun.com'
   - '+.jinyindao.com'
   - '+.jinying.com'
   - '+.jinyongwang.com'
@@ -31510,6 +31494,7 @@ payload:
   - '+.jiuxing.com'
   - '+.jiuxusb.com'
   - '+.jiuyan.info'
+  - '+.jiuyang.com'
   - '+.jiuyao666.com'
   - '+.jiuyi2005.com'
   - '+.jiuyiliebian.com'
@@ -31570,7 +31555,6 @@ payload:
   - '+.jj55.com'
   - '+.jj59.com'
   - '+.jj831.com'
-  - '+.jjaaj.com'
   - '+.jjapk.com'
   - '+.jjb-static.com'
   - '+.jjbang.com'
@@ -32231,7 +32215,6 @@ payload:
   - '+.juduo.cc'
   - '+.juduoping.com'
   - '+.jue.so'
-  - '+.jue1.com'
   - '+.juecan.com'
   - '+.juedui100.com'
   - '+.jueduilingyu.com'
@@ -32306,7 +32289,6 @@ payload:
   - '+.juming-xz.com'
   - '+.juming.com'
   - '+.jumore.com'
-  - '+.jumorenews.com'
   - '+.jump-game.com'
   - '+.jumpjumpcat.com'
   - '+.jumple.com'
@@ -34455,6 +34437,7 @@ payload:
   - '+.laolieren.shop'
   - '+.laolinow.com'
   - '+.laoluoshouji.net'
+  - '+.laomaotao.com'
   - '+.laomaotao.net'
   - '+.laomaotao.org'
   - '+.laomaotaopan.com'
@@ -34882,7 +34865,6 @@ payload:
   - '+.lerye.com'
   - '+.leshanvc.com'
   - '+.leshiguang.com'
-  - '+.leshou.com'
   - '+.leshow.com'
   - '+.leshu.com'
   - '+.leshuazf.com'
@@ -35028,6 +35010,7 @@ payload:
   - '+.lhdxz.com'
   - '+.lhggjd.org'
   - '+.lhh.la'
+  - '+.lhl7.com'
   - '+.lhrbszb.com'
   - '+.lhs-arts.org'
   - '+.lhs11.com'
@@ -35317,7 +35300,6 @@ payload:
   - '+.liminjie714.com'
   - '+.liminwang.com'
   - '+.limless.com'
-  - '+.limoer.cc'
   - '+.linakesi.com'
   - '+.linban.com'
   - '+.lincoc.com'
@@ -35612,6 +35594,7 @@ payload:
   - '+.liuhaolin.com'
   - '+.liujiajia.me'
   - '+.liujiangblog.com'
+  - '+.liujiaoyidai.com'
   - '+.liujijun.com'
   - '+.liujto.com'
   - '+.liujunworld.com'
@@ -37700,6 +37683,7 @@ payload:
   - '+.mescroll.com'
   - '+.meshiot.com'
   - '+.mesince.com'
+  - '+.mesowe.com'
   - '+.mesresearch.com'
   - '+.mesule.com'
   - '+.met.red'
@@ -38346,7 +38330,6 @@ payload:
   - '+.mmim8.com'
   - '+.mmimm.com'
   - '+.mmkkiivv.com'
-  - '+.mmloo.com'
   - '+.mmm.io'
   - '+.mmmiao.com'
   - '+.mmmmmmm.com'
@@ -39732,6 +39715,7 @@ payload:
   - '+.newclouddenfender.com'
   - '+.newcoder.com'
   - '+.newcosemi.com'
+  - '+.newcrcaib.com'
   - '+.newdao.net'
   - '+.newday.me'
   - '+.newdon.net'
@@ -39759,7 +39743,6 @@ payload:
   - '+.neworiental.org'
   - '+.nework360.com'
   - '+.neworldedu.org'
-  - '+.neworldjp.com'
   - '+.news18a.com'
   - '+.news606.com'
   - '+.newsccn.com'
@@ -39827,7 +39810,6 @@ payload:
   - '+.nfrencai.com'
   - '+.nfs-china.com'
   - '+.nfschina.com'
-  - '+.nfyk.com'
   - '+.nfzhouyi.com'
   - '+.ng-alain.com'
   - '+.nga.wiki'
@@ -40156,6 +40138,7 @@ payload:
   - '+.nnwb.com'
   - '+.nnynrc.com'
   - '+.nnzsxblaw.com'
+  - '+.no1cg.com'
   - '+.noahedu.com'
   - '+.noahsnail.com'
   - '+.noahteck.com'
@@ -41403,7 +41386,6 @@ payload:
   - '+.paoao.net'
   - '+.paochefang.com'
   - '+.paodoo.com'
-  - '+.paofugroup.com'
   - '+.paojiao.com'
   - '+.paolanhuanbao.com'
   - '+.paomo.com'
@@ -41521,6 +41503,7 @@ payload:
   - '+.pc6.com'
   - '+.pc6a.com'
   - '+.pc811.com'
+  - '+.pc89.com'
   - '+.pc9.com'
   - '+.pcaposter.com'
   - '+.pcapqz.com'
@@ -42144,7 +42127,6 @@ payload:
   - '+.plcdn.net'
   - '+.plcent.com'
   - '+.plcloud.com'
-  - '+.plcsq.com'
   - '+.plesk-cn.com'
   - '+.plexpt.com'
   - '+.plngan.net'
@@ -43366,7 +43348,6 @@ payload:
   - '+.qingsongchou.com'
   - '+.qingstor.com'
   - '+.qingsucai.com'
-  - '+.qingsword.com'
   - '+.qingtaoke.com'
   - '+.qingtengzhilian.com'
   - '+.qingtian16265.com'
@@ -44175,7 +44156,6 @@ payload:
   - '+.qvlz.com'
   - '+.qvpublish.com'
   - '+.qw5599.com'
-  - '+.qwdacy.com'
   - '+.qweather.com'
   - '+.qweather.net'
   - '+.qwfync.com'
@@ -44264,10 +44244,10 @@ payload:
   - '+.qyyqyj.com'
   - '+.qyzba.club'
   - '+.qyzc.net'
+  - '+.qyzlgame.com'
   - '+.qz100.com'
   - '+.qz123.com'
   - '+.qz828.com'
-  - '+.qz930.com'
   - '+.qz96811.com'
   - '+.qzbbs.com'
   - '+.qzbigstone.com'
@@ -44634,12 +44614,10 @@ payload:
   - '+.renrendai.com'
   - '+.renrendoc.com'
   - '+.renrenfinance.com'
-  - '+.renrenhuigo.com'
   - '+.renrening.com'
   - '+.renrenmoney.com'
   - '+.renrenpeizhen.com'
   - '+.renrenshipu.com'
-  - '+.renrenso.com'
   - '+.renrensousuo.com'
   - '+.renrenstudy.com'
   - '+.renrentou.com'
@@ -44938,6 +44916,7 @@ payload:
   - '+.rongstone.com'
   - '+.rongtai-china.com'
   - '+.rongxingvr.cc'
+  - '+.rongxinzh.com'
   - '+.rongyao666.com'
   - '+.rongyi.com'
   - '+.rongyiju.com'
@@ -45747,7 +45726,6 @@ payload:
   - '+.sdfmgg.com'
   - '+.sdg-china.com'
   - '+.sdgaoxing.com'
-  - '+.sdgcp.com'
   - '+.sdgdxt.com'
   - '+.sdgh.net'
   - '+.sdgho.com'
@@ -45869,7 +45847,6 @@ payload:
   - '+.seanya.com'
   - '+.seanyxie.com'
   - '+.seapard.com'
-  - '+.search1990.com'
   - '+.search616.com'
   - '+.searchforit8.com'
   - '+.searchpstatp.com'
@@ -46388,7 +46365,6 @@ payload:
   - '+.shaolinwy.com'
   - '+.shaoqun.com'
   - '+.shaoshilei.com'
-  - '+.shaoxing330.com'
   - '+.shaoyee.com'
   - '+.shaozi.info'
   - '+.shaphc.org'
@@ -51561,6 +51537,7 @@ payload:
   - '+.tt1386.com'
   - '+.tt286.com'
   - '+.tt65org.com'
+  - '+.tt787.com'
   - '+.tt96596.com'
   - '+.ttaidu.com'
   - '+.ttbba.com'
@@ -52535,7 +52512,6 @@ payload:
   - '+.unitymanual.com'
   - '+.uniview.com'
   - '+.uniworldart.com'
-  - '+.unixfbi.com'
   - '+.unixhot.com'
   - '+.unixidc.com'
   - '+.unixs.org'
@@ -53637,6 +53613,7 @@ payload:
   - '+.wajueji.com'
   - '+.wakatool.com'
   - '+.wakedata.com'
+  - '+.wakeofgods.com'
   - '+.waketu.com'
   - '+.wakeup.fun'
   - '+.wakingsands.com'
@@ -55634,6 +55611,7 @@ payload:
   - '+.wplizhi.com'
   - '+.wpmtp.com'
   - '+.wporder.com'
+  - '+.wproedu.com'
   - '+.wps-office.net'
   - '+.wpscdn.com'
   - '+.wpsdns.com'
@@ -55900,6 +55878,7 @@ payload:
   - '+.wul.ai'
   - '+.wulannews.com'
   - '+.wuletv.com'
+  - '+.wuli.wiki'
   - '+.wuliannanjing.com'
   - '+.wuliaoo.com'
   - '+.wuliaosi.com'
@@ -56701,6 +56680,7 @@ payload:
   - '+.xiacaipiao.com'
   - '+.xiachufang.com'
   - '+.xiada.net'
+  - '+.xiadaolieche.com'
   - '+.xiadele.com'
   - '+.xiadts.com'
   - '+.xiadu.com'
@@ -57144,7 +57124,6 @@ payload:
   - '+.xiaozaixiao.com'
   - '+.xiaozhan.cc'
   - '+.xiaozhang365.com'
-  - '+.xiaozhewz.com'
   - '+.xiaozhibaoxian.com'
   - '+.xiaozhibo.com'
   - '+.xiaozhiyun.com'
@@ -58914,6 +58893,7 @@ payload:
   - '+.yannaisi.com'
   - '+.yannv.com'
   - '+.yanoda.com'
+  - '+.yanpengjk.com'
   - '+.yanpk.com'
   - '+.yanpwy.com'
   - '+.yanqiao.com'
@@ -59088,7 +59068,6 @@ payload:
   - '+.ycloudvip.com'
   - '+.yclunwen.com'
   - '+.ycmbcd.com'
-  - '+.ycoem.net'
   - '+.ycool.com'
   - '+.ycpack.net'
   - '+.ycpai.com'
@@ -59759,6 +59738,7 @@ payload:
   - '+.yipinsucai.com'
   - '+.yipintemian.com'
   - '+.yipuping.com'
+  - '+.yiq.com'
   - '+.yiqi.com'
   - '+.yiqianbao.com'
   - '+.yiqianlian.com'
@@ -61075,6 +61055,7 @@ payload:
   - '+.yunconfig.com'
   - '+.yunda56.com'
   - '+.yundaex.com'
+  - '+.yundagongyi.com'
   - '+.yundangan.com'
   - '+.yundasys.com'
   - '+.yundianjia.com'
@@ -62894,6 +62875,7 @@ payload:
   - '+.zhouyi.cc'
   - '+.zhouyi.org'
   - '+.zhouyi114.com'
+  - '+.zhouyiapi.com'
   - '+.zhouyigw.com'
   - '+.zhouyiju.com'
   - '+.zhouyuanchao.com'
@@ -63089,7 +63071,6 @@ payload:
   - '+.zhutousan.net'
   - '+.zhuwang.cc'
   - '+.zhuwang360.com'
-  - '+.zhuwofang.com'
   - '+.zhuwona.com'
   - '+.zhuxianfei.com'
   - '+.zhuxiaobang.com'
@@ -63314,7 +63295,6 @@ payload:
   - '+.zjdashi.com'
   - '+.zjdata.net'
   - '+.zjdh.org'
-  - '+.zjdomain.com'
   - '+.zjdybank.com'
   - '+.zjdydlc.com'
   - '+.zjdyjob.com'
@@ -63707,7 +63687,6 @@ payload:
   - '+.zoukankan.com'
   - '+.zoular.com'
   - '+.zoutu.com'
-  - '+.zouzhenzhong.com'
   - '+.zouzhiqiang.com'
   - '+.zowoyoo.com'
   - '+.zoxun.com'
