--- a/directbak.yaml
+++ b/directbak.yaml
@@ -753,7 +753,6 @@ payload:
   - '+.101hr.com'
   - '+.101jiajiao.com'
   - '+.101weiqi.com'
-  - '+.1020m.com'
   - '+.1024.com'
   - '+.1024.ink'
   - '+.1024g.com'
@@ -782,7 +781,6 @@ payload:
   - '+.107788.com'
   - '+.108101.xyz'
   - '+.108105.xyz'
-  - '+.108198.com'
   - '+.10865.com'
   - '+.108cun.com'
   - '+.108pk.com'
@@ -1629,7 +1627,6 @@ payload:
   - '+.18daxue.com'
   - '+.18dx.com'
   - '+.18guanjia.com'
-  - '+.18kf.net'
   - '+.18l.net'
   - '+.18ladys.com'
   - '+.18link.com'
@@ -2078,7 +2075,6 @@ payload:
   - '+.233863.com'
   - '+.2339.com'
   - '+.233d.net'
-  - '+.233i.me'
   - '+.233leyuan.com'
   - '+.233lyly.com'
   - '+.233o.net'
@@ -2530,6 +2526,7 @@ payload:
   - '+.330123456.com'
   - '+.3304399.com'
   - '+.3304399.net'
+  - '+.330shingpklk.com'
   - '+.33105.com'
   - '+.331234.xyz'
   - '+.3312345.com'
@@ -2904,7 +2901,6 @@ payload:
   - '+.36cao.live'
   - '+.36dianping.com'
   - '+.36dj.com'
-  - '+.36dm.com'
   - '+.36hjob.com'
   - '+.36jr.com'
   - '+.36kr.com'
@@ -3051,6 +3047,7 @@ payload:
   - '+.3cpp.org'
   - '+.3cvrc.com'
   - '+.3cwu.com'
+  - '+.3cxg6v.com'
   - '+.3d-stereovision.com'
   - '+.3d2000.com'
   - '+.3d56.net'
@@ -3135,7 +3132,6 @@ payload:
   - '+.3laz.com'
   - '+.3lbrand.com'
   - '+.3lian.com'
-  - '+.3lii.com'
   - '+.3lsoft.com'
   - '+.3mbang.com'
   - '+.3mh0yvx.com'
@@ -4653,7 +4649,6 @@ payload:
   - '+.58wzb.com'
   - '+.58xinrui.com'
   - '+.58xs.la'
-  - '+.58xs.tw'
   - '+.58xuexi.com'
   - '+.58yiji.com'
   - '+.58youtui.com'
@@ -6643,7 +6638,6 @@ payload:
   - '+.97775.com'
   - '+.977pk.com'
   - '+.978239.vip'
-  - '+.97828bb.com'
   - '+.97866.com'
   - '+.9787.com'
   - '+.978clouds.com'
@@ -7643,7 +7637,6 @@ payload:
   - '+.aihuau.com'
   - '+.aihuhua.com'
   - '+.aihuishou.com'
-  - '+.aihuo.cc'
   - '+.aii-alliance.org'
   - '+.aiibii.com'
   - '+.aiijournal.com'
@@ -7873,7 +7866,6 @@ payload:
   - '+.ajcass.org'
   - '+.ajcctv.com'
   - '+.ajclass.com'
-  - '+.ajebw.com'
   - '+.ajhchem.com'
   - '+.ajinga.com'
   - '+.ajiuqian.com'
@@ -9602,6 +9594,7 @@ payload:
   - '+.bandubook.com'
   - '+.banfubbs.com'
   - '+.banfuzg.com'
+  - '+.bang1.work'
   - '+.bangbang.com'
   - '+.bangbang93.com'
   - '+.bangbangbang.wang'
@@ -10353,12 +10346,10 @@ payload:
   - '+.bhgmarketplace.com'
   - '+.bhhgallery.com'
   - '+.bhjck.com'
-  - '+.bhjysp.com'
   - '+.bhk.mobi'
   - '+.bhnsh.com'
   - '+.bhpiano.com'
   - '+.bhrencai.com'
-  - '+.bhrhw.com'
   - '+.bhsr.com'
   - '+.bhuitong.com'
   - '+.bhxww.com'
@@ -11228,7 +11219,6 @@ payload:
   - '+.bobouny.com'
   - '+.bobtranslate.com'
   - '+.bocai.life'
-  - '+.bocaidaka.com'
   - '+.boce.com'
   - '+.bocep2c.com'
   - '+.bocichina.com'
@@ -11996,7 +11986,6 @@ payload:
   - '+.cagoe.com'
   - '+.cahkms.org'
   - '+.cahuo.com'
-  - '+.cai188.com'
   - '+.cai8.net'
   - '+.caian.net'
   - '+.caibaojian.com'
@@ -12161,7 +12150,6 @@ payload:
   - '+.canhot.net'
   - '+.caniculab.com'
   - '+.canidc.com'
-  - '+.canjiren.net'
   - '+.cankao100.com'
   - '+.cankaoshouce.com'
   - '+.cankaowang.com'
@@ -12944,7 +12932,6 @@ payload:
   - '+.cfca-c.org'
   - '+.cfcf.ink'
   - '+.cfcglx.com'
-  - '+.cfcp67.com'
   - '+.cfcpn.com'
   - '+.cfcyb.com'
   - '+.cfd-china.com'
@@ -13064,7 +13051,6 @@ payload:
   - '+.chachaba.com'
   - '+.chachaqu.com'
   - '+.chacheliang.com'
-  - '+.chachongba.cc'
   - '+.chacuo.net'
   - '+.chadan.wang'
   - '+.chadianhua.net'
@@ -16863,7 +16849,6 @@ payload:
   - '+.dadiyimao.com'
   - '+.dadizq.com'
   - '+.dadou.com'
-  - '+.dadoubao.com'
   - '+.dadunet.com'
   - '+.daerzhu.com'
   - '+.daf-rs.com'
@@ -18139,7 +18124,6 @@ payload:
   - '+.dismall.com'
   - '+.disneybox.com'
   - '+.dispnt.com'
-  - '+.disswhat.com'
   - '+.distantmeaning.com'
   - '+.distinctclinic.com'
   - '+.ditan360.com'
@@ -19035,7 +19019,6 @@ payload:
   - '+.dujiapin.com'
   - '+.dujin.org'
   - '+.dujiza.com'
-  - '+.dujowah4i45.com'
   - '+.dukechiang.com'
   - '+.dukharo.com'
   - '+.dukuai.com'
@@ -19328,7 +19311,6 @@ payload:
   - '+.dz19.net'
   - '+.dz1982.com'
   - '+.dz31hao.com'
-  - '+.dz746.com'
   - '+.dz88.com'
   - '+.dzbake.com'
   - '+.dzbarcode.com'
@@ -20738,7 +20720,6 @@ payload:
   - '+.eyoucms.com'
   - '+.eyourbusiness.com'
   - '+.eyprint.com'
-  - '+.eyrefree.org'
   - '+.eyu2017.xyz'
   - '+.eyuangong.com'
   - '+.eyuconnect.com'
@@ -21366,7 +21347,6 @@ payload:
   - '+.fengbolive.com'
   - '+.fengbuy.com'
   - '+.fengchizixun.com'
-  - '+.fengchj.com'
   - '+.fengchuanba.com'
   - '+.fengchui.cc'
   - '+.fengchusheng.com'
@@ -21692,7 +21672,6 @@ payload:
   - '+.fjotic.com'
   - '+.fjpta.com'
   - '+.fjreading.com'
-  - '+.fjsdfz.org'
   - '+.fjsdn.com'
   - '+.fjsen.com'
   - '+.fjsfa.org'
@@ -23444,7 +23423,6 @@ payload:
   - '+.gnssopenlab.org'
   - '+.gnvip.net'
   - '+.gnway.com'
-  - '+.go-chicago.com'
   - '+.go-gddq.com'
   - '+.go-goal.com'
   - '+.go.cc'
@@ -24023,6 +24001,7 @@ payload:
   - '+.guangdauser.com'
   - '+.guangdianyun.tv'
   - '+.guangdiu.com'
+  - '+.guangdongtaiji.com'
   - '+.guangdv.com'
   - '+.guangfeng.com'
   - '+.guanggao.com'
@@ -24235,7 +24214,6 @@ payload:
   - '+.guoxuemi.com'
   - '+.guoxuwang.com'
   - '+.guoyang.cc'
-  - '+.guoyanni.com'
   - '+.guoyi360.com'
   - '+.guoyice.com'
   - '+.guoyu.com'
@@ -24553,7 +24531,6 @@ payload:
   - '+.gzstv.com'
   - '+.gzsuiti.com'
   - '+.gzsums.net'
-  - '+.gzsxc.com'
   - '+.gzsy06.com'
   - '+.gzsy07.com'
   - '+.gzszgas.com'
@@ -25045,7 +25022,6 @@ payload:
   - '+.hao61.net'
   - '+.hao661.com'
   - '+.hao695.com'
-  - '+.hao6c.com'
   - '+.hao7188.com'
   - '+.hao753.com'
   - '+.hao76.com'
@@ -25613,7 +25589,6 @@ payload:
   - '+.hd199.com'
   - '+.hd199.net'
   - '+.hd3p.com'
-  - '+.hd88599.com'
   - '+.hdavchina.com'
   - '+.hdb.com'
   - '+.hdbaichuan.com'
@@ -28679,7 +28654,6 @@ payload:
   - '+.idomb.com'
   - '+.idong.ren'
   - '+.idongde.com'
-  - '+.idongdong.com'
   - '+.idongniu.com'
   - '+.idongte.com'
   - '+.idosend.com'
@@ -29244,7 +29218,6 @@ payload:
   - '+.imkira.com'
   - '+.imlaidian.com'
   - '+.imlcl.com'
-  - '+.imlgm.com'
   - '+.imlianai.com'
   - '+.imliuyi.com'
   - '+.immi520.com'
@@ -29340,7 +29313,6 @@ payload:
   - '+.inabr.com'
   - '+.inad.com'
   - '+.inanrenbang.com'
-  - '+.inapian.com'
   - '+.inbeijing.org'
   - '+.inbilin.com'
   - '+.inbooker.com'
@@ -31097,7 +31069,6 @@ payload:
   - '+.jimubox.com'
   - '+.jimuc.com'
   - '+.jimucake.com'
-  - '+.jimucc.com'
   - '+.jimufund.com'
   - '+.jimuhezi.com'
   - '+.jimujiazx.com'
@@ -31242,7 +31213,6 @@ payload:
   - '+.jingzhe.me'
   - '+.jingzhengu.com'
   - '+.jingzhusz.com'
-  - '+.jinhaidai.com'
   - '+.jinhe-energy.com'
   - '+.jinhengjgj.com'
   - '+.jinher.com'
@@ -31584,7 +31554,6 @@ payload:
   - '+.jjhuifu.com'
   - '+.jjhuigou.com'
   - '+.jjhuoyan.com'
-  - '+.jjiayi.com'
   - '+.jjidc.com'
   - '+.jjiehao.com'
   - '+.jjinfo.com'
@@ -32648,7 +32617,6 @@ payload:
   - '+.jzsxinyudianqi.com'
   - '+.jzsyishu.com'
   - '+.jztdc.com'
-  - '+.jztdj.com'
   - '+.jztey.com'
   - '+.jztmgy.com'
   - '+.jztsjx.com'
@@ -33042,7 +33010,6 @@ payload:
   - '+.keede.com'
   - '+.keenonrobot.com'
   - '+.keensky.com'
-  - '+.keep.city'
   - '+.keep.com'
   - '+.keepc.com'
   - '+.keepcdn.com'
@@ -33129,7 +33096,6 @@ payload:
   - '+.kenuonet.com'
   - '+.kenweini.com'
   - '+.kepingtong.com'
-  - '+.kepuchina.org'
   - '+.kepusky.com'
   - '+.kepuyanxue.com'
   - '+.kequcps.com'
@@ -33171,6 +33137,7 @@ payload:
   - '+.kexuezixunzzs.com'
   - '+.keyan.life'
   - '+.keyboardancer.com'
+  - '+.keyboardingonline.net'
   - '+.keycom-ip.com'
   - '+.keydatas.com'
   - '+.keydot.net'
@@ -33239,7 +33206,6 @@ payload:
   - '+.kihgwe.com'
   - '+.kiiik.com'
   - '+.kiijoy.com'
-  - '+.kikicici.com'
   - '+.kikitamap.com'
   - '+.kikoplay.fun'
   - '+.kiku.vip'
@@ -34070,7 +34036,6 @@ payload:
   - '+.kxiaoshuo77.com'
   - '+.kxinyk.com'
   - '+.kxji.com'
-  - '+.kxjlt.org'
   - '+.kxp7.xyz'
   - '+.kxqo2ev.com'
   - '+.kxscience.com'
@@ -34962,7 +34927,6 @@ payload:
   - '+.lezi.com'
   - '+.lezuan.net'
   - '+.lezuan9.com'
-  - '+.lf-tools.net'
   - '+.lf127.net'
   - '+.lfan.net'
   - '+.lfang.com'
@@ -36358,7 +36322,6 @@ payload:
   - '+.lumanman1688.com'
   - '+.lumiai.com'
   - '+.lumingtec.com'
-  - '+.lumit.org'
   - '+.lumiunited.com'
   - '+.lumyhouse.com'
   - '+.lunar2013.com'
@@ -36732,7 +36695,6 @@ payload:
   - '+.m2mzy.com'
   - '+.m3guo.com'
   - '+.m448.com'
-  - '+.m598.com'
   - '+.m5bn.com'
   - '+.m5stack.com'
   - '+.m6go.com'
@@ -37099,7 +37061,6 @@ payload:
   - '+.maoha.com'
   - '+.maohaha.com'
   - '+.maohetao.com'
-  - '+.maohui.net'
   - '+.maoken.com'
   - '+.maoln.com'
   - '+.maomaoche.com'
@@ -39070,7 +39031,6 @@ payload:
   - '+.mycleanmymac.com'
   - '+.myclub2.com'
   - '+.mycnc.org'
-  - '+.mycodes.net'
   - '+.mycollect.net'
   - '+.mycolorway.com'
   - '+.mycoov.com'
@@ -39509,7 +39469,6 @@ payload:
   - '+.nbpolytheatre.com'
   - '+.nbrj.com'
   - '+.nbrlzy.com'
-  - '+.nbrz.site'
   - '+.nbsason.com'
   - '+.nbshuoxue.com'
   - '+.nbsqbank.com'
@@ -40169,6 +40128,7 @@ payload:
   - '+.nonganxian.com'
   - '+.nongcun5.com'
   - '+.nongfen.com'
+  - '+.nongfujing.com'
   - '+.nongfuspring.com'
   - '+.nongji1688.com'
   - '+.nongji360.com'
@@ -41565,7 +41525,6 @@ payload:
   - '+.pd120.com'
   - '+.pd17.com'
   - '+.pd521.com'
-  - '+.pd81.xyz'
   - '+.pdazw.com'
   - '+.pdbeta.com'
   - '+.pdcuo.com'
@@ -42815,7 +42774,6 @@ payload:
   - '+.qdgw.com'
   - '+.qdgxqrc.com'
   - '+.qdgxzg.com'
-  - '+.qdhaichen.com'
   - '+.qdhantang.com'
   - '+.qdhmsoft.com'
   - '+.qdhsty.com'
@@ -43749,6 +43707,7 @@ payload:
   - '+.qqqnm.com'
   - '+.qqqooo.com'
   - '+.qqqqqqqqqqqqq.com'
+  - '+.qqrain.com'
   - '+.qqread.com'
   - '+.qqride.com'
   - '+.qqrizhi.com'
@@ -44033,6 +43992,7 @@ payload:
   - '+.quimg.com'
   - '+.quji.com'
   - '+.qujianpan.com'
+  - '+.qujie365.com'
   - '+.qujiemi.com'
   - '+.qujinhuo.com'
   - '+.qujishu.com'
@@ -44334,6 +44294,7 @@ payload:
   - '+.rainhz.com'
   - '+.rainlain.com'
   - '+.rainmanfloor.com'
+  - '+.rainwe.com'
   - '+.rainyun.com'
   - '+.raisecom.com'
   - '+.raisedsun.com'
@@ -44782,6 +44743,7 @@ payload:
   - '+.riyugo.com'
   - '+.riyujob.com'
   - '+.riyurumen.com'
+  - '+.riyutool.com'
   - '+.rizhao9.com'
   - '+.rizhaociming.com'
   - '+.rizhaokjg.com'
@@ -45574,6 +45536,7 @@ payload:
   - '+.schneidercampus.com'
   - '+.scholarmate.com'
   - '+.scholat.com'
+  - '+.school888.com'
   - '+.schoolpi.net'
   - '+.schove.com'
   - '+.schrb.com'
@@ -46175,7 +46138,6 @@ payload:
   - '+.sh8y.com'
   - '+.sh9130.com'
   - '+.sh9156.com'
-  - '+.sh9yuan.com'
   - '+.sha-cun.com'
   - '+.sha-steel.com'
   - '+.sha2777.com'
@@ -47322,7 +47284,6 @@ payload:
   - '+.sigmoblive.com'
   - '+.sigongzi.shop'
   - '+.sigu.cc'
-  - '+.sigu.me'
   - '+.siguoya.name'
   - '+.siguschool.com'
   - '+.sihai-inc.com'
@@ -48658,7 +48619,6 @@ payload:
   - '+.stockhn.com'
   - '+.stockstar.com'
   - '+.stockwei.com'
-  - '+.stockxp.com'
   - '+.stointl.com'
   - '+.stojf.com'
   - '+.stone168.com'
@@ -50306,7 +50266,6 @@ payload:
   - '+.teshenqi.com'
   - '+.tesolsh.com'
   - '+.tesoon.com'
-  - '+.test-edu.net'
   - '+.test404.com'
   - '+.testbird.com'
   - '+.testcoo.com'
@@ -50315,14 +50274,12 @@ payload:
   - '+.testerlife.com'
   - '+.testict.com'
   - '+.testingpai.com'
-  - '+.testiu.com'
   - '+.testlrq.com'
   - '+.testroad.org'
   - '+.testrust.com'
   - '+.testtao.com'
   - '+.testwo.com'
   - '+.testxy.com'
-  - '+.testyk.com'
   - '+.teuhui.com'
   - '+.tex68.com'
   - '+.texclo.net'
@@ -50532,6 +50489,7 @@ payload:
   - '+.tianhujy.com'
   - '+.tianji.com'
   - '+.tianji368.com'
+  - '+.tianjiarun.com'
   - '+.tianjigame.com'
   - '+.tianjihr.com'
   - '+.tianjimedia.com'
@@ -52993,6 +52951,7 @@ payload:
   - '+.velep.com'
   - '+.velocaps.com'
   - '+.vemarsdev.com'
+  - '+.vemic.com'
   - '+.vemvm.com'
   - '+.ventoy.net'
   - '+.venucia.com'
@@ -53021,7 +52980,6 @@ payload:
   - '+.veryhappy.pw'
   - '+.veryide.com'
   - '+.veryim.com'
-  - '+.veryim.org'
   - '+.veryitman.com'
   - '+.verym.com'
   - '+.veryns.com'
@@ -55353,7 +55311,6 @@ payload:
   - '+.wo.cc'
   - '+.wo113.net'
   - '+.wo116114.com'
-  - '+.wo123.com'
   - '+.wo186.tv'
   - '+.wo188.win'
   - '+.wo1990.com'
@@ -59032,7 +58989,6 @@ payload:
   - '+.ybvipdns.com'
   - '+.ybvv.com'
   - '+.ybword.com'
-  - '+.ybwzx.com'
   - '+.ybxww.com'
   - '+.ybyxw.com'
   - '+.ybzhao.com'
@@ -59271,7 +59227,6 @@ payload:
   - '+.yfcache.com'
   - '+.yfcdn.net'
   - '+.yfcloud.com'
-  - '+.yfcmf.net'
   - '+.yfdc.net'
   - '+.yfdns.net'
   - '+.yfdts.net'
@@ -62645,6 +62600,7 @@ payload:
   - '+.zhiweidata.com'
   - '+.zhiweisoft.com'
   - '+.zhiwo.com'
+  - '+.zhiwushuo.com'
   - '+.zhiwuwang.com'
   - '+.zhixiaohuoke.com'
   - '+.zhixiaoren.com'
@@ -62814,6 +62770,7 @@ payload:
   - '+.zhongshang114.com'
   - '+.zhongshanpark.com'
   - '+.zhongshengdai.com'
+  - '+.zhongshengxinyun.com'
   - '+.zhongshucan.com'
   - '+.zhongso.com'
   - '+.zhongsou.com'
@@ -62892,6 +62849,7 @@ payload:
   - '+.zhsyb.cc'
   - '+.zhtelecom.com'
   - '+.zhtmid.com'
+  - '+.zhu23.work'
   - '+.zhu360.com'
   - '+.zhuainiu.com'
   - '+.zhuan16.com'
@@ -62989,7 +62947,6 @@ payload:
   - '+.zhuizhuiimg.com'
   - '+.zhuizhuiyoyo.com'
   - '+.zhuji.com'
-  - '+.zhuji.la'
   - '+.zhuji.net'
   - '+.zhuji5.com'
   - '+.zhujia360.com'
@@ -63712,7 +63669,6 @@ payload:
   - '+.zppxba.com'
   - '+.zptong.com'
   - '+.zptq.com'
-  - '+.zpzyb.com'
   - '+.zq12369.com'
   - '+.zq235.com'
   - '+.zq99y.com'
@@ -63787,7 +63743,6 @@ payload:
   - '+.zshield.net'
   - '+.zshl.com'
   - '+.zshlife.com'
-  - '+.zshu.net'
   - '+.zshuoshao.online'
   - '+.zsia.org'
   - '+.zsihuo.com'
