--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2363,7 +2363,6 @@ payload:
   - '+.2pcdn.com'
   - '+.2q10.com'
   - '+.2q1q.com'
-  - '+.2qbb.com'
   - '+.2r3r.com'
   - '+.2rich.net'
   - '+.2shihui.net'
@@ -3210,7 +3209,6 @@ payload:
   - '+.4006055885.com'
   - '+.4006216888.com'
   - '+.4006339177.com'
-  - '+.4006666688.com'
   - '+.4006695539.com'
   - '+.4006906600.com'
   - '+.4007108885.net'
@@ -4201,6 +4199,7 @@ payload:
   - '+.52cik.com'
   - '+.52ckd.com'
   - '+.52click.net'
+  - '+.52codes.net'
   - '+.52da.com'
   - '+.52daohang.com'
   - '+.52debug.net'
@@ -7485,7 +7484,6 @@ payload:
   - '+.ahougn.com'
   - '+.ahphi.com'
   - '+.ahqmdq.com'
-  - '+.ahrefa.com'
   - '+.ahrunzi.com'
   - '+.ahs.pub'
   - '+.ahscl.com'
@@ -8653,7 +8651,6 @@ payload:
   - '+.app178.com'
   - '+.app2006.com'
   - '+.app2pixel.com'
-  - '+.app4cms.net'
   - '+.app86.com'
   - '+.app887.com'
   - '+.appadhoc.com'
@@ -11902,7 +11899,6 @@ payload:
   - '+.c360dn.com'
   - '+.c3acg.com'
   - '+.c3crm.com'
-  - '+.c3sales.com'
   - '+.c3x.me'
   - '+.c4008.com'
   - '+.c400c.cc'
@@ -14543,7 +14539,6 @@ payload:
   - '+.ciimg.com'
   - '+.ciiplat.com'
   - '+.ciji234.com'
-  - '+.cijilu.com'
   - '+.ciku5.com'
   - '+.cili001.com'
   - '+.cili8.xyz'
@@ -14756,7 +14751,6 @@ payload:
   - '+.clewm.net'
   - '+.clfile.com'
   - '+.cli.im'
-  - '+.click-v.com'
   - '+.click369.com'
   - '+.clicksdiy.com'
   - '+.clicksun.net'
@@ -17424,7 +17418,6 @@ payload:
   - '+.ddoswafcdn.xyz'
   - '+.ddove.com'
   - '+.ddpai.com'
-  - '+.ddport.com'
   - '+.ddqcw.com'
   - '+.ddsaas.com'
   - '+.ddstarapp.com'
@@ -17871,7 +17864,6 @@ payload:
   - '+.dianli08.com'
   - '+.dianliang8.com'
   - '+.dianliaoapp.com'
-  - '+.dianlujitao.com'
   - '+.dianlut.com'
   - '+.dianm.cc'
   - '+.dianmiaoshou.com'
@@ -19294,7 +19286,6 @@ payload:
   - '+.dytt7899.com'
   - '+.dytt8.com'
   - '+.dytt8.net'
-  - '+.dyw0.com'
   - '+.dyxldjy.com'
   - '+.dyxsdwm.com'
   - '+.dyxtw.com'
@@ -21322,7 +21313,6 @@ payload:
   - '+.feizhaojun.com'
   - '+.feizhu.com'
   - '+.feizhupan.com'
-  - '+.fekonmotor.com'
   - '+.felicitysolar.com'
   - '+.feling.net'
   - '+.felink.com'
@@ -25028,7 +25018,6 @@ payload:
   - '+.hao86.com'
   - '+.hao8dai.com'
   - '+.hao9669.com'
-  - '+.hao9988.com'
   - '+.haoad.org'
   - '+.haoamc.com'
   - '+.haoayi.xyz'
@@ -28945,7 +28934,6 @@ payload:
   - '+.iiijk.com'
   - '+.iiilab.com'
   - '+.iiiview.net'
-  - '+.iiiyan.com'
   - '+.iikeji.com'
   - '+.iikuzhan.com'
   - '+.iikx.com'
@@ -31995,7 +31983,6 @@ payload:
   - '+.jsclearing.com'
   - '+.jscmjt.com'
   - '+.jscnc.net'
-  - '+.jscqt.com'
   - '+.jscsfc.com'
   - '+.jscssimg.com'
   - '+.jscts.com'
@@ -32076,6 +32063,7 @@ payload:
   - '+.jspang.com'
   - '+.jspatch.com'
   - '+.jspeople.com'
+  - '+.jspp.com'
   - '+.jspxcms.com'
   - '+.jsq886.com'
   - '+.jsqlawer.com'
@@ -35026,7 +35014,6 @@ payload:
   - '+.liangyadong.com'
   - '+.liangyi.com'
   - '+.liangzhishu.com'
-  - '+.liangziseo.com'
   - '+.lianhaikeji.com'
   - '+.lianhanghao.com'
   - '+.lianhecang.com'
@@ -36178,7 +36165,6 @@ payload:
   - '+.lsbchina.com'
   - '+.lsbin.com'
   - '+.lsccb.com'
-  - '+.lscsfw.com'
   - '+.lsfyw.net'
   - '+.lsg3.com'
   - '+.lsgrandtheatre.com'
@@ -37153,6 +37139,7 @@ payload:
   - '+.mat-rev.com'
   - '+.mat-test.com'
   - '+.matao.com'
+  - '+.matchupexpo.com'
   - '+.matchvs.com'
   - '+.mateair.com'
   - '+.mater-rep.com'
@@ -38186,7 +38173,6 @@ payload:
   - '+.mjia.cc'
   - '+.mjjcn.com'
   - '+.mjjq.com'
-  - '+.mjju.net'
   - '+.mjlong.com'
   - '+.mjlsh.com'
   - '+.mjmj8.net'
@@ -39511,7 +39497,6 @@ payload:
   - '+.ncu.me'
   - '+.ncvtinfo.com'
   - '+.ncvtmi.com'
-  - '+.ncwyxh.com'
   - '+.ncxb.com'
   - '+.ncyinghuochong.net'
   - '+.ncyunqi.com'
@@ -40585,6 +40570,7 @@ payload:
   - '+.oi-wiki.org'
   - '+.oiaqye7985.com'
   - '+.oicat.com'
+  - '+.oicp.net'
   - '+.oicq88.com'
   - '+.oicto.com'
   - '+.oidchina.org'
@@ -42174,7 +42160,6 @@ payload:
   - '+.polarxiong.com'
   - '+.polaxiong.com'
   - '+.polayoutu.com'
-  - '+.pole2fitness.com'
   - '+.polebrief.com'
   - '+.polingba.com'
   - '+.poluoluo.com'
@@ -42366,7 +42351,6 @@ payload:
   - '+.ppxs.net'
   - '+.ppxvod.com'
   - '+.ppxwo.com'
-  - '+.ppxzy.org'
   - '+.ppys.net'
   - '+.ppzhan.com'
   - '+.ppzhilian.com'
@@ -43547,6 +43531,7 @@ payload:
   - '+.qldzj.com'
   - '+.qlgpy.com'
   - '+.qlidc.com'
+  - '+.qlivecdn.com'
   - '+.qljgw.com'
   - '+.qll-times.com'
   - '+.qlmoney.com'
@@ -45550,7 +45535,6 @@ payload:
   - '+.scichina.com'
   - '+.scicn.net'
   - '+.scidict.org'
-  - '+.sciencemeta.com'
   - '+.scientrans.com'
   - '+.scies.org'
   - '+.scifans.com'
@@ -45712,7 +45696,6 @@ payload:
   - '+.sdicin.com'
   - '+.sdicpower.com'
   - '+.sdicvc.com'
-  - '+.sdifenzhou.com'
   - '+.sdiitu.com'
   - '+.sdiread.com'
   - '+.sditol.com'
@@ -48400,7 +48383,6 @@ payload:
   - '+.sqstudio.com'
   - '+.squarecn.com'
   - '+.squarefong.com'
-  - '+.sqxy.net'
   - '+.sqzw.com'
   - '+.srcb.com'
   - '+.srcbcz.com'
@@ -49997,7 +49979,6 @@ payload:
   - '+.tbyfsoft.com'
   - '+.tbyuantu.com'
   - '+.tc-21.com'
-  - '+.tc-ds2000.com'
   - '+.tc12580.com'
   - '+.tc199.net'
   - '+.tc9011.com'
@@ -50585,7 +50566,6 @@ payload:
   - '+.tianyijue.com'
   - '+.tianyinzaixian.com'
   - '+.tianyitop.com'
-  - '+.tianyiweiya.com'
   - '+.tianyue100.com'
   - '+.tianyuimg.com'
   - '+.tianzeba.com'
@@ -51515,6 +51495,7 @@ payload:
   - '+.ttime.com'
   - '+.ttionya.com'
   - '+.ttjianbao.com'
+  - '+.ttjiasu.com'
   - '+.ttkdex.com'
   - '+.ttkefu.com'
   - '+.ttkkuu.com'
@@ -51878,7 +51859,6 @@ payload:
   - '+.tvtide.com'
   - '+.tvtsg.com'
   - '+.tvxio.com'
-  - '+.tvyouxuan.com'
   - '+.tvzhe.com'
   - '+.tvzn.com'
   - '+.tw-yun.com'
@@ -51999,8 +51979,8 @@ payload:
   - '+.typechodev.com'
   - '+.typecodes.com'
   - '+.typekuon.com'
-  - '+.tyr.gift'
   - '+.tyrantdb.com'
+  - '+.tyrbw.com'
   - '+.tyread.com'
   - '+.tysdmh.com'
   - '+.tysj365.com'
@@ -54395,6 +54375,7 @@ payload:
   - '+.weleve.com'
   - '+.weliads.com'
   - '+.welian.com'
+  - '+.welidaimkt.com'
   - '+.welife001.com'
   - '+.welife100.com'
   - '+.welinkpark.com'
@@ -63722,7 +63703,6 @@ payload:
   - '+.zs8q.com'
   - '+.zsaber.com'
   - '+.zsacg.com'
-  - '+.zsafw.com'
   - '+.zsaxi.com'
   - '+.zsbeike.com'
   - '+.zsbit.com'
