--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4199,7 +4199,6 @@ payload:
   - '+.52cik.com'
   - '+.52ckd.com'
   - '+.52click.net'
-  - '+.52codes.net'
   - '+.52da.com'
   - '+.52daohang.com'
   - '+.52debug.net'
@@ -4867,7 +4866,6 @@ payload:
   - '+.5tscm.com'
   - '+.5u18.com'
   - '+.5u3d.com'
-  - '+.5u588.com'
   - '+.5u5u5u5u.com'
   - '+.5upm.com'
   - '+.5usport.com'
@@ -6615,7 +6613,6 @@ payload:
   - '+.96caifu.com'
   - '+.96dp.com'
   - '+.96hq.com'
-  - '+.96jia.com'
   - '+.96jm.com'
   - '+.96jx.com'
   - '+.96kaifa.com'
@@ -8563,6 +8560,7 @@ payload:
   - '+.aoyanchang.com'
   - '+.aoye.com'
   - '+.aoyii.com'
+  - '+.aoyiluoad.com'
   - '+.aoyor.com'
   - '+.aoyotech.com'
   - '+.aoyou.cc'
@@ -10972,7 +10970,6 @@ payload:
   - '+.bjwkzl.com'
   - '+.bjwszyxy.com'
   - '+.bjwwhc.com'
-  - '+.bjwxhl.com'
   - '+.bjwyseo.com'
   - '+.bjxatq.com'
   - '+.bjxcloud.com'
@@ -12504,6 +12501,7 @@ payload:
   - '+.cct08.com'
   - '+.cct365.net'
   - '+.cctalk.com'
+  - '+.cctalk.net'
   - '+.cctaw.com'
   - '+.cctb.net'
   - '+.cctbn.com'
@@ -15115,7 +15113,6 @@ payload:
   - '+.cndns5.com'
   - '+.cndoornet.com'
   - '+.cndoors.com'
-  - '+.cndrynet.com'
   - '+.cndsnet.com'
   - '+.cndss.net'
   - '+.cndtlab.com'
@@ -19422,7 +19419,6 @@ payload:
   - '+.e360xs.com'
   - '+.e365.org'
   - '+.e365mall.com'
-  - '+.e3cloud.com'
   - '+.e3ol.com'
   - '+.e4008.com'
   - '+.e4221.com'
@@ -24292,6 +24288,7 @@ payload:
   - '+.gxb2b.net'
   - '+.gxbaidutg.com'
   - '+.gxbf.net'
+  - '+.gxbiandao.com'
   - '+.gxbys.com'
   - '+.gxbyw.com'
   - '+.gxcards.com'
@@ -26058,7 +26055,6 @@ payload:
   - '+.hhpj.net'
   - '+.hhrcard.com'
   - '+.hhrdc.com'
-  - '+.hhrtu.com'
   - '+.hhtmm.com'
   - '+.hhtravel.com'
   - '+.hhvv.com'
@@ -29611,7 +29607,6 @@ payload:
   - '+.ipmay.com'
   - '+.ipmost.com'
   - '+.ipmph.com'
-  - '+.ipns.network'
   - '+.ipo.la'
   - '+.ipo3.com'
   - '+.ipoceo.com'
@@ -31041,7 +31036,6 @@ payload:
   - '+.jilinpujiyiyuan.com'
   - '+.jilinwula.com'
   - '+.jilinxiangyun.com'
-  - '+.jilinyixing.com'
   - '+.jiliyun.com'
   - '+.jiluchengshi.com'
   - '+.jimeisilk.com'
@@ -31472,7 +31466,6 @@ payload:
   - '+.jiweixin168.com'
   - '+.jiwu.com'
   - '+.jiwudai.com'
-  - '+.jixia.ink'
   - '+.jixiangbaiwei.com'
   - '+.jixiangjili.com'
   - '+.jixiangyou.com'
@@ -31833,6 +31826,7 @@ payload:
   - '+.jovcloud.com'
   - '+.jovetech.com'
   - '+.jowto.com'
+  - '+.joy5151.com'
   - '+.joyact.com'
   - '+.joyami.com'
   - '+.joyany.com'
@@ -35315,6 +35309,7 @@ payload:
   - '+.lingtool.com'
   - '+.lingtu.com'
   - '+.lingtuan.com'
+  - '+.lingumob.com'
   - '+.lingw.net'
   - '+.lingwh.com'
   - '+.lingwu66.com'
@@ -37833,7 +37828,6 @@ payload:
   - '+.microfotos.com'
   - '+.microlensyh.com'
   - '+.microlz.com'
-  - '+.micromouse.tech'
   - '+.microrui.net'
   - '+.microsoft-yuncdn.com'
   - '+.microstern.com'
@@ -38508,6 +38502,8 @@ payload:
   - '+.momooyo.com'
   - '+.momoshifu.com'
   - '+.momotn.com'
+  - '+.momoyu.com'
+  - '+.momoyuyouxi.com'
   - '+.momself.club'
   - '+.momzs.com'
   - '+.moneydata.hk'
@@ -39370,7 +39366,6 @@ payload:
   - '+.naobiao.com'
   - '+.naoda.net'
   - '+.naoffer.com'
-  - '+.naonaola.com'
   - '+.naozhong.net'
   - '+.napiantian.com'
   - '+.naquan.com'
@@ -40047,6 +40042,7 @@ payload:
   - '+.nmhfw.com'
   - '+.nmimi.com'
   - '+.nmkjxy.com'
+  - '+.nmmlresearch.xyz'
   - '+.nmslqm.com'
   - '+.nmtyxy.com'
   - '+.nmvps.com'
@@ -43168,6 +43164,7 @@ payload:
   - '+.qilang.net'
   - '+.qilanxiaozhu.co'
   - '+.qilanxiaozhu.net'
+  - '+.qilanxiaozhu.vip'
   - '+.qilecms.com'
   - '+.qiliaokj.com'
   - '+.qilindao.com'
@@ -43772,7 +43769,6 @@ payload:
   - '+.qseeking.com'
   - '+.qsfcw.com'
   - '+.qshang.com'
-  - '+.qsixi.com'
   - '+.qskretkf.com'
   - '+.qsmis.com'
   - '+.qspfw.com'
@@ -44722,7 +44718,6 @@ payload:
   - '+.ritering.com'
   - '+.rivergame.net'
   - '+.rixin.info'
-  - '+.riyuanma.com'
   - '+.riyuexing.org'
   - '+.riyuezhuan.com'
   - '+.riyugo.com'
@@ -48241,7 +48236,6 @@ payload:
   - '+.souyidai.com'
   - '+.souyue.mobi'
   - '+.souyunku.com'
-  - '+.sov5.com'
   - '+.sovell.com'
   - '+.soven.com'
   - '+.sovxin.com'
@@ -49006,6 +49000,7 @@ payload:
   - '+.suzip.net'
   - '+.suzuki-china.com'
   - '+.suzuki-shanghai.com'
+  - '+.sve.cc'
   - '+.svenhetin.com'
   - '+.svinsight.com'
   - '+.svip15.com'
@@ -49627,7 +49622,6 @@ payload:
   - '+.taidic.net'
   - '+.taidous.com'
   - '+.taidu.com'
-  - '+.taifutj.com'
   - '+.taig.com'
   - '+.taigaoxiao.com'
   - '+.taigongwl.com'
@@ -51294,7 +51288,6 @@ payload:
   - '+.trade-over-world.com'
   - '+.trade-plug.net'
   - '+.trade2cn.com'
-  - '+.tradeask.com'
   - '+.tradeleo.com'
   - '+.tradew.com'
   - '+.tradow.com'
@@ -51369,7 +51362,6 @@ payload:
   - '+.tronixin.com'
   - '+.tropcdn.com'
   - '+.trpcdn.net'
-  - '+.trsgdj.com'
   - '+.trsoft.vip'
   - '+.trsoft.xin'
   - '+.trsol.com'
@@ -51960,6 +51952,7 @@ payload:
   - '+.tycits.com'
   - '+.tycqxs.com'
   - '+.tycredit.com'
+  - '+.tydevice.com'
   - '+.tydouke.com'
   - '+.tyfo.com'
   - '+.tyhjzx.com'
@@ -53428,6 +53421,7 @@ payload:
   - '+.vvo2o.com'
   - '+.vvpingtai.com'
   - '+.vvpncdn.com'
+  - '+.vvstc.com'
   - '+.vvtor.com'
   - '+.vvup.net'
   - '+.vvv.io'
@@ -57675,7 +57669,6 @@ payload:
   - '+.xizangqinglv.com'
   - '+.xizangzl.com'
   - '+.xizhang.com'
-  - '+.xizhezhe.com'
   - '+.xizhi.com'
   - '+.xizi.com'
   - '+.xiziquan.com'
@@ -59047,7 +59040,6 @@ payload:
   - '+.ydmel.com'
   - '+.ydmeng.com'
   - '+.ydmob.com'
-  - '+.ydmsh.com'
   - '+.ydn5.com'
   - '+.ydnewmedia.com'
   - '+.ydr.me'
@@ -59627,7 +59619,6 @@ payload:
   - '+.yinjietd.com'
   - '+.yinka.co'
   - '+.yinker.com'
-  - '+.yinliuba.com'
   - '+.yinmishu.com'
   - '+.yinongtouzi.com'
   - '+.yinpiao.com'
@@ -60007,7 +59998,6 @@ payload:
   - '+.ymgmno.com'
   - '+.ymhudong.com'
   - '+.ymiot.net'
-  - '+.ymjm.net'
   - '+.ymkuzhan.com'
   - '+.ymlfxp.com'
   - '+.ymlinks.com'
@@ -60034,7 +60024,6 @@ payload:
   - '+.ymyun.com'
   - '+.ymyxzz.com'
   - '+.ymzer.com'
-  - '+.ymzsl.dev'
   - '+.yn-tobacco.com'
   - '+.yn12396.com'
   - '+.yn58.com'
@@ -60314,6 +60303,7 @@ payload:
   - '+.youlanw.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
+  - '+.youliangda.com'
   - '+.youliaobaike.com'
   - '+.youliaoyi.com'
   - '+.youlinyouke.com'
@@ -61857,6 +61847,7 @@ payload:
   - '+.zerocollege.com'
   - '+.zerogfans.com'
   - '+.zeroling.com'
+  - '+.zeroonead.com'
   - '+.zeruns.tech'
   - '+.zerustech.com'
   - '+.zesee.com'
@@ -62181,8 +62172,10 @@ payload:
   - '+.zhangzs.com'
   - '+.zhanh.com'
   - '+.zhanhi.com'
+  - '+.zhanhuo.com'
   - '+.zhankoo.com'
   - '+.zhanlingol.com'
+  - '+.zhanq.net'
   - '+.zhanqi.net'
   - '+.zhanqi.tv'
   - '+.zhanqitv.com'
