--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5733,7 +5733,6 @@ payload:
   - '+.8090xx.com'
   - '+.8090yx.com'
   - '+.8090yxs.com'
-  - '+.809803.com'
   - '+.809926.net'
   - '+.80baicai.biz'
   - '+.80bi.com'
@@ -7800,7 +7799,6 @@ payload:
   - '+.aiweibang.com'
   - '+.aiweline.com'
   - '+.aiwen.cc'
-  - '+.aiwenwo.net'
   - '+.aiwenyi.com'
   - '+.aiworkspace.com'
   - '+.aiwulao.com'
@@ -17288,6 +17286,7 @@ payload:
   - '+.dazhe5.com'
   - '+.dazhenzimiao.com'
   - '+.dazhewa.com'
+  - '+.dazhong.com'
   - '+.dazhongbanben.com'
   - '+.dazhonghr.com'
   - '+.dazhoumzj.com'
@@ -18140,6 +18139,7 @@ payload:
   - '+.diygogogo.com'
   - '+.diygw.com'
   - '+.diyhi.com'
+  - '+.diyiapp.com'
   - '+.diyicai.com'
   - '+.diyidan.com'
   - '+.diyidan.net'
@@ -20629,6 +20629,7 @@ payload:
   - '+.excelpx.com'
   - '+.exceltip.net'
   - '+.exchen.net'
+  - '+.excm.net'
   - '+.exdoll.com'
   - '+.exexm.com'
   - '+.exezhanqun.com'
@@ -38854,6 +38855,7 @@ payload:
   - '+.mumayi.com'
   - '+.mumu01.com'
   - '+.muniao.com'
+  - '+.mupao.com'
   - '+.mupceet.com'
   - '+.mupmstx.com'
   - '+.murdermysterypa.com'
@@ -42604,6 +42606,7 @@ payload:
   - '+.pystarter.com'
   - '+.pytgo.com'
   - '+.python-china.com'
+  - '+.python100.com'
   - '+.python51.com'
   - '+.pythonav.com'
   - '+.pythonclub.org'
@@ -48510,6 +48513,7 @@ payload:
   - '+.starpiao.com'
   - '+.starrockinvest.com'
   - '+.starrtc.com'
+  - '+.starrydyn.com'
   - '+.starrysurvey.com'
   - '+.stars-one.site'
   - '+.starschina.com'
@@ -57556,6 +57560,7 @@ payload:
   - '+.xitek.net'
   - '+.xitie.com'
   - '+.xitieba.com'
+  - '+.xitieba.net'
   - '+.xitmi.com'
   - '+.xitong-tech.com'
   - '+.xitong110.com'
@@ -63716,6 +63721,7 @@ payload:
   - '+.zshield.net'
   - '+.zshl.com'
   - '+.zshlife.com'
+  - '+.zshtys888.com'
   - '+.zshuoshao.online'
   - '+.zsia.org'
   - '+.zsihuo.com'
